# TheHangmanWordlist

./: .gitignore  LICENSE  README.md  _config.yml  main.py  pyproject.toml  the_hangman_wordlist.py  wordlist.json
example/: hangman.py  hangman_art.py  wordlist.json
src/the_hangman_wordlist/: __init__.py  hangman_wordlist.py  wordlist.json
src/the_hangman_wordlist_TheBiemGamer/: the_hangman_wordlist.py  wordlist.json
