[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the_hangman_wordlist"
version = "0.8.2"
authors = [
  { name="TheBiemGamer", email="47662596+TheBiemGamer@users.noreply.github.com" },
]
description = "A library to pick hangman words."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://thebiemgamer.github.io/TheHangmanWordlist"
"Source Code" = "https://github.com/TheBiemGamer/TheHangmanWordlist"

[tool.hatch.build.targets.wheel]
packages = ["src/the_hangman_wordlist"]